# vertica-adhd

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: docker-build.yml
app/: __init__.py  brain_sync.py  coach.py  config.py  db.py  llm.py  main.py  models.py  notifications.py  scheduler.py  xp.py
app/protocols/: __init__.py  adhoc.py  evening.py  morning.py  unstuck.py  weekly_sweep.py
app/routers/: api.py  chat.py  dashboard.py  mobile.py  webhooks.py
app/templates/: base.html  dashboard.html
app/templates/mobile/: chat.html  index.html
app/templates/partials/: status.html
data/brain/: COACH.md
migrations/: 001_initial.sql
scripts/: seed.py
static/css/: dashboard.css
static/js/: htmx.min.js
